Mon Jul 07 07:46:00 2003  Justin Michel  <michel_j@ociweb.com>
	
	* examples/RTCORBA/Activity/Activity.cpp
	* examples/RTCORBA/Activity/Activity.mpc
	* examples/RTCORBA/Activity/main.cpp

          Reverted my changes to Activity from July 3. I thought
        of a new way to write the mpc that's compatible with the 
        existing Makefile.

Mon Jul 07 07:52:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/Makefile:
          Added NT_Service, this fixes the build and link problems we have
          with MinGW.

Mon Jul 07 07:00:01 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Simple/echo/Echo_Client.bor:
        * examples/Simple/echo/Echo_Server.bor:
          Corrected the names of the executables generated. The perl script
          expects certain names and borland generated other filenames
          resulting in the fact that the perl script didn't run.

Mon Jul 07 06:06:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTScheduling/RTScheduler.h:
        * orbsvcs/tests/Notify/lib/Periodic_Supplier.h:
          Fixed fuzz errors about incorrect doxygen file tag

Sun Jul 06 17:40:19 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/tests/Notify/lib:
	* orbsvcs/tests/Notify/RT_lib:

	  Changed all instances of "TAO_NS_" with "TAO_Notify_Tests_" because of
	  conflicting namespace with the Notify orbsvcs library classes.
	  This was causing some programs to crash on Win2k.

	* orbsvcs/orbsvcs/Notify:
	* orbsvcs/Notify_Service/Notify_Service.cpp:

	  Changed all instances of "TAO_NS_" with "TAO_Notify_" as "NS" is
	  easily confused with the Naming Service.

	* orbsvcs/examples/Notify/Lanes/Supplier.h:
	* orbsvcs/examples/Notify/Lanes/Supplier.cpp:
	* orbsvcs/examples/Notify/Lanes/Consumer.h:
	* orbsvcs/examples/Notify/Lanes/Consumer.cpp:

	  Appended "Lanes" word to the Supplier and Consumer class
	  declarations to avoid namespace conflict with the Notify library.
